# NST-Ghost

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  LICENSE  Makefile  NST  README.md  SECURITY.md  bgadatamanager.cpp  bgadatamanager.h  bgadatamanager_log.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_batch.txt  build_log_chunking.txt  build_log_debugger.txt  build_log_debugger_final.txt  build_log_debugger_fix.txt  build_log_final.txt  build_log_final_fix.txt  build_log_fix.txt  build_log_fix_code_check.txt  build_log_fix_freeze.txt  build_log_fix_prompt.txt  build_log_fix_queue.txt  build_log_settings.txt  build_log_settings_fix.txt  build_log_test_fix.txt  build_log_ui_fix.txt  build_log_verify_ini.txt  build_output.txt  check_braces.py  cmake_install.cmake  (+73 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_NST_7c34387742.cmake
BGA/: BGA_global.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  bga.cpp  bga.h  cmake_install.cmake
BGA/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
BGA/BGACore_autogen/: deps  moc_predefs.h
BGA/bga_rs/: Cargo.toml
BGA/bga_rs/src/: analyzer.rs  ffi.rs  lib.rs
BGA/bga_rs/src/engines/: mod.rs  renpy.rs  rpgm.rs  unity.rs
BGA/build-t1/include/core/: gameanalyzer.h
BGA/build-t1/include/core/engines/unity/: unityanalyzer.h
BGA/core/: CMakeLists.txt
BGA/core/include/core/: analyzerfactory.h  bga_rust_bridge.h  gameanalyzer.h
BGA/core/include/core/engines/renpy/: renpyanalyzer.h
BGA/core/include/core/engines/rpgm/: rpganalyzer.h
BGA/core/include/core/engines/unity/: unityanalyzer.h
BGA/core/src/: analyzerfactory.cpp  bga_rust_bridge.cpp  gameanalyzer.cpp
BGA/core/src/engines/renpy/: renpyanalyzer.cpp
BGA/core/src/engines/rpgm/: rpganalyzer.cpp  temp_method.cpp
BGA/core/src/engines/unity/: unityanalyzer.cpp
BGA/packaging/fedora/: bga.spec
BGA/scripts/: create-source-tarball.sh  install-fedora.sh
BGA/tests/: BGACoreTests  CMakeLists.txt  CTestTestfile.cmake  Makefile  TestRpgAnalyzer  cmake_install.cmake  test_analyzer_stub.cpp  test_rpg_analyzer.cpp
BGA/tests/BGACoreTests_autogen/: deps  moc_predefs.h
BGA/tests/BGACoreTests_autogen/include/: test_analyzer_stub.moc  test_analyzer_stub.moc.d
BGA/tests/TestRpgAnalyzer_autogen/: deps  moc_predefs.h
BGA/tests/TestRpgAnalyzer_autogen/include/: test_rpg_analyzer.moc  test_rpg_analyzer.moc.d
BGA/tools/analyzers/rpgm/: CMakeLists.txt  main.cpp  rpganalyzer.cpp  rpganalyzer.h
BGA/tools/analyzers/template/: CMakeLists.txt  main.cpp  templateanalyzer.cpp  templateanalyzer.h
BGA/tools/analyzers/unity/: CMakeLists.txt  main.cpp  unityanalyzer.cpp  unityanalyzer.h
BGA/tools/runner/: CMakeLists.txt  main.cpp
BGA/tools/translator/: CMakeLists.txt  main.cpp
Injection/: CMakeLists.txt  CTestTestfile.cmake  Injection_global.h  Makefile  cmake_install.cmake  injection.cpp  injection.h
Injection/Injection_autogen/: deps  moc_predefs.h
Injection/runner/: injector_main.cpp
NST_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
QtLingo/: CMakeLists.txt  CTestTestfile.cmake  Makefile  QtLingo_global.h  cmake_install.cmake  qtlingo.cpp  qtlingo.h
QtLingo/QtLingo_autogen/: deps  moc_predefs.h
QtLingo/QtLingo_autogen/JF5ZEU5S3Q/: moc_translationservice.cpp  moc_translationservice.cpp.d
QtLingo/QtLingo_autogen/UVLADIE3JM/: moc_google_translate_service.cpp  moc_google_translate_service.cpp.d  moc_llm_translation_service.cpp  moc_llm_translation_service.cpp.d
QtLingo/include/qtlingo/: translationplugininterface.h  translationservice.h  translationservicefactory.h
QtLingo/src/: google_translate_service.cpp  google_translate_service.h  llm_translation_service.cpp  llm_translation_service.h  onnx_distilbert_translation_service.cpp  onnx_distilbert_translation_service.h  translationservicefactory.cpp
build-windows/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
docs/: DISTRIBUTION_STRATEGY.md  LUA_API.md
plugins/: CMakeLists.txt
plugins/MockDataPlugin/: CMakeLists.txt  MockDataPlugin.cpp  MockDataPlugin.h
plugins/MockTranslationPlugin/: CMakeLists.txt  mockplugin.cpp
plugins/UnrpycPlugin/: CMakeLists.txt  UnrpycPlugin.cpp  UnrpycPlugin.h
scripts/: ai_smart_filter.py  api_example.lua  build_release.sh  custom_engine.lua  debug_merge.py  debug_ocr.py  generate_manifest.py  groq_translate.lua  image_translator.py  install-ai-features.ps1  install-ai-features.sh  install_unrpyc.lua  mock_data.lua  official_example.lua  rpgm_rules.py  text_processor.lua  unrpyc_installer.lua
src/: bgadatamanager.cpp  bgadatamanager.h  customprogressdialog.cpp  customtitlebar.cpp  customtitlebar.h  filetranslationwidget.cpp  filetranslationwidget.h  fontmanagerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  plugindebuggerdialog.h  pluginmanagerdialog.cpp  projectdatamanager.cpp  projectdatamanager.h  realtimetranslationwidget.cpp  relationitem.cpp  relationshipwidget.h  resources.qrc  rpgrelationanalyzer.cpp  settingsdialog.cpp  settingsdialog.h  smartfiltermanager.cpp  smartfiltermanager.h  style.qss  translationserver.cpp  translationservicemanager.h
src/core/: main.cpp  (+3 more)
src/plugins/LuaTranslationPlugin/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  luaplugin.h  luatranslationservice.cpp
src/plugins/LuaTranslationPlugin/LuaTranslationPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/plugins/LuaTranslationPlugin/LuaTranslationPlugin_autogen/EWIEGA46WW/: moc_luaplugin.cpp  moc_luaplugin.cpp.d  moc_luatranslationservice.cpp  moc_luatranslationservice.cpp.d
src/plugins/MockTranslationPlugin/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mockplugin.h
src/plugins/MockTranslationPlugin/MockTranslationPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/plugins/MockTranslationPlugin/MockTranslationPlugin_autogen/EWIEGA46WW/: moc_mockplugin.cpp  moc_mockplugin.cpp.d
(+286 files in other folders)
