[package]
name = "bga_rs"
version = "0.1.0"
edition = "2021"
description = "Background Game Analyzer - Rust Core"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
once_cell = "1.19"

[profile.release]
lto = true
opt-level = 3
